--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "observe-dom-resize",
-  "version": "1.0.0",
+  "version": "1.0.5",
   "description": "observe dom resize",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
     "build": "rollup -c"
   },
