--- a/package.json
+++ b/package.json
@@ -1,17 +1,18 @@
 {
   "name": "observe-dom-resize",
-  "version": "1.0.6",
+  "version": "1.1.0",
   "description": "observe dom resize",
   "main": "dist/index.js",
   "scripts": {
-    "build": "rollup -c"
+    "build": "rollup -c",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/JohnApache/observe-dom-resize.git"
   },
   "author": "JohnApache",
-  "license": "ISC",
+  "license": "MIT",
   "bugs": {
     "url": "https://github.com/JohnApache/observe-dom-resize/issues"
   },
@@ -19,11 +20,15 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
     "@babel/preset-env": "^7.5.5",
-    "@babel/register": "^7.5.5",
-    "rollup-plugin-babel": "^4.3.3"
+    "rollup": "^1.20.2",
+    "rollup-plugin-babel": "^4.3.3",
+    "rollup-plugin-commonjs": "^10.0.2",
+    "rollup-plugin-node-resolve": "^5.2.0",
+    "rollup-plugin-terser": "^5.1.1"
   },
   "dependencies": {
-    "@babel/polyfill": "^7.4.4"
+    "@babel/runtime-corejs3": "^7.5.5"
   }
 }
